--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -57,12 +57,12 @@ page-home {
 
 	#sectionAccueil {
 		position: relative;
-		height: 100%;
 		background-color: #08C5CB;
 		text-align: center;
 		padding-right: 15px;
 		padding-left: 15px;
 		padding-top: 15%;
+		padding-bottom: 70px;
 	}
 	
 	#sectionAccueil p {
@@ -72,24 +72,20 @@ page-home {
 		color: #F9643C;
 		text-shadow: 1px 1px 1px black;
 		font-family: 'Convergence', sans-serif;
-		margin-bottom: 250px;
 	}
 	
+	#imageAccueil {
+		margin-top: -20px;
+	}
+
 	#voirProjets {
 		font-size: 25px;
 		text-decoration: none;
 		color: white;
 		border: 2px solid white;
-		text-align: center;
 		padding: 10px;
-	}
 
-	#imageAccueil {
-		position: absolute;
-		top: 270px;
-		left: 0;
 	}
-
 
 	/*--------------------------------SECTION DE PROJETS--------------------------------*/
 
@@ -168,7 +164,7 @@ page-home {
 		right: 5%;
 	}
 	
-	/*--------------------------SECTION PROFIL--------------------------------------*/
+	/*--------------------------SECTION PARCOUR--------------------------------------*/
 	#sectionParcour {
 		background-color: #E76E33;
 		color: black;
@@ -176,7 +172,7 @@ page-home {
 		padding-left: 18px;
 		padding-right: 18px;
 		font-size: 14px;
-		height: 600px;
+		padding-bottom: 35px;
 	}
 	
 	#aPropos {
@@ -185,7 +181,7 @@ page-home {
 
 	#articleCompetences {
 		display: flex;
-		height: 185px;
+		height: 170px;
 	}
 	
 	#articleCompetences ul {
@@ -193,13 +189,12 @@ page-home {
 		font-size: 14px;
 		width: 50%;
 		text-align: center;
-		margin-top: 30px;
+		margin-top: 15px;
 	}
 
 	#articleCompetences img {
-		width: 40%;
 		margin-left: 25px;
-		margin-top: 30px;
+		margin-top: 15px;
 		border: 1px solid black;
 	}
 	
@@ -209,7 +204,7 @@ page-home {
 /*-------------------------------------SECTION CONTACT-------------------------------------*/
 
 	#sectionContact {
-		height: 470px;
+		height: 465px;
 		background-color: #4C4C4C;
 		font-size: 14px;
 		color: white;
@@ -271,6 +266,7 @@ page-home {
 	#articleInfo ul {
 		list-style-type: none;
 		font-size: 16px;
+		margin-top: 0px;
 		margin-left: 20px;
 	}
 
@@ -309,7 +305,7 @@ page-home {
 	}
 
 	footer {
-		height: 75px;
+		height: 65px;
 		background-color: #242424;
 		display: flex;
 		justify-content: space-around;
