--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -245,14 +245,33 @@ page-home {
 	}
 	
 	#submit {
-		width: 30%;
-		margin-left: 70%;
+		width: 35%;
+		margin-left: 0px;
 		margin-bottom: 15px;
 		background-color: #E9E9E8;
 		border: 1px solid #08C5CB;
 		height: 25px;
 		color: black;
 
+	}
+
+	#msgAjax {
+		width: 63%;
+		height: 25px;
+		color: white;
+		margin-right: 0px;
+		display: inline-block;
+		padding-top: 4px;
+		text-align: center;
+		background-color: #08C5CB;
+		border: 1px solid white;
+		text-shadow: 0px 0px 5px black;
+		visibility: hidden;
+	}
+
+	#englobage {
+		display: flex;
+		justify-content: space-between;
 	}
 
 	#articleInfo {
